--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       </div>
       <div>
         <p>Email:<a href="mailto:abc@gmail.com">am2699@njit.edu</a></p>
-        <p>Web abc.github.io/abc</p>
+        <p>Web amritm1015.github.io/resume-react/</p>
         <p>Mobile:01234567890</p>
       </div>
     </div>
