--- a/public/index.html
+++ b/public/index.html
@@ -57,23 +57,23 @@
       </div>
       <div>
         <ul>
-          <li>A Key skill</li>
-          <li>A Key skill</li>
-          <li>A Key skill</li>
+          <li>Python</li>
+          <li>Java</li>
+          <li>C</li>
         </ul>
       </div>
       <div>
         <ul>
-          <li>A Key skill</li>
-          <li>A Key skill</li>
-          <li>A Key skill</li>
+          <li>AWS</li>
+          <li>Windows/Linux</li>
+          <li>Microsoft Office</li>
         </ul>
       </div>
       <div>
         <ul>
-          <li>A Key skill</li>
-          <li>A Key skill</li>
-          <li>A Key skill</li>
+          <li>Problem Solving</li>
+          <li>Communication & Teamwork</li>
+          <li>Adaptive</li>
         </ul>
       </div>
     </div>
@@ -86,13 +86,7 @@
       <div class="university">
         <h3>New Jersey Institute of Technology</h3>
         <p class="large-text"> BS in Computer Science</p>
-        <p class="large-text">2018-2022</p>
-        <p class="large-text">GPA: 3.9</p>
-        <br>
-        <h3>New Jersey Institute of Technology</h3>
-        <p class="large-text"> MS in Computer Science</p>
-        <p class="large-text">2022-2023</p>
-        <p class="large-text">GPA: 4.0</p>
+        <p class="large-text">2018-2025</p>
       </div>
     </div>
 
