added some personal info stuff

--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
     
     <div class="flex-container"  id="profile">
       <div><h3><i>Personal Profile</i></h3></div>
-      <p class="large-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-        enim ad minim veniam, quis nostrud exercitation ullamco laboris
-        nisi ut aliquip ex ea commodo consequat.
+      <p class="large-text">Motivated and detail-oriented Computer Science student with strong problem-solving skills and a passion for developing efficient, user-friendly applications. 
+        Experienced in building React-based web applications and deploying them using GitHub Pages. 
+        Proficient in JavaScript, Python, and FastAPI, with a solid foundation in software development, version control (Git), and RESTful API design. 
+        Eager to contribute technical expertise, learn new technologies, and collaborate effectively in dynamic, team-oriented environments.
       </p>
     </div>
     <hr class="horizontal">
