--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
+<!--
 <!DOCTYPE html>
 <html>
     <head>
-      <link rel="stylesheet" href="styles.css">
       <title>Resume</title>
     </head>
   
@@ -91,4 +91,16 @@
     </div>
 
   </body>
+</html>
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>React App</title>
+</head>
+<body>
+    <div id="root"></div> <!-- 🚩 React mounts here -->
+</body>
 </html>
